--- a/css/hammer.css
+++ b/css/hammer.css
@@ -233,6 +233,7 @@ html {
 /* PROJECT DESCRIPTION  */
 .description{
   display: flex;
+  line-height: 1.5em;
   flex-flow: row wrap;
 }
 
@@ -242,7 +243,7 @@ html {
 }
 
 .description p{
-  line-height: 2.0em;
+  
   text-align: left;
 }
 
@@ -272,9 +273,7 @@ iframe{
 
 .process p{
   font-size: 16px;
-  padding: 0 150px;
-  text-align: left;
-  line-height: 2.0em;
+  padding: 0 125px;
 }
 
 .problem, .research, .insight, .concept, .iteration{
@@ -352,16 +351,7 @@ iframe{
 /* INSIGHT  */
 
 /* CONCEPT  */
-.details{
-  text-align: left;
-  margin-top: 2.0em;
-  padding: 0 200px;
-  line-height: 1.5em;
-}
 
-.details li{
-  margin-bottom: 1.0em;
-}
 /* CONCEPT IMAGE CONTAINER  */
 .concept-image-container{
   width: 8000px;
@@ -519,7 +509,7 @@ font-family: 'Merriweather', serif;
 }
 
 /* FONT  */
-p, a, .details{
+p, a{
 font-family: 'Poppins', sans-serif;
 }
 
@@ -579,15 +569,9 @@ font-family: 'Poppins', sans-serif;
   /* NAVIGATION  */
 
   /* PROJECT DESCRIPTION  */
-  .description p{
-    line-height: 1.5em;
-  }
 
   /* THE PROCESS  */
-  .process p{
-    line-height: 1.5em;
-    padding: 0 25px;
-  }
+
   /* PROBLEM  */
 
   /* RESEARCH  */
@@ -595,9 +579,6 @@ font-family: 'Poppins', sans-serif;
   /* INSIGHT  */
 
   /* CONCEPT  */
-  .details{
-    padding: 0 100px;
-  }
 
   /* ITERATE  */
 
@@ -632,13 +613,13 @@ font-family: 'Poppins', sans-serif;
       flex-flow: column wrap;
     }
 
-    .description h2{
+    .description h2, .description p{
       text-align: center;
     }
 
     /* THE PROCESS  */
     .process p{
-      padding: 0 25px;
+      padding: 0;
     }
 
     /* PROBLEM  */
@@ -648,10 +629,6 @@ font-family: 'Poppins', sans-serif;
     /* INSIGHT  */
 
     /* CONCEPT  */
-    .details{
-      padding: 0 75px;
-    }
-
     .concept-image-container{
       width: 6000px;
       height: 450px;
@@ -778,14 +755,12 @@ font-family: 'Poppins', sans-serif;
     }
 
     /* PROJECT DESCRIPTION  */
-    .description p{
+    .description p, .process p{
       padding: 0;
+      text-align: left;
     }
 
     /* THE PROCESS  */
-    .process p{
-      padding: 0 5px;
-    }
 
     /* PROBLEM  */
 
@@ -794,10 +769,6 @@ font-family: 'Poppins', sans-serif;
     /* INSIGHT  */
 
     /* CONCEPT  */
-    .details{
-      padding: 0 50px;
-    }
-
     .concept-image-container{
       width: 5500px;
       height: 450px;
@@ -905,12 +876,8 @@ font-family: 'Poppins', sans-serif;
     /* PROJECT DESCRIPTION  */
 
     /* THE PROCESS  */
-    .process p, .description p, .details{
+    .process p, .description p{
       font-size: 12px;
-    }
-
-    .process p{
-      padding: 0 15px;
     }
 
     /* PROBLEM  */
@@ -1051,7 +1018,6 @@ so they don't overlap */
     /* THE PROCESS  */
     .process p, .description p{
       font-size: 10px;
-      padding: 0;
     }
 
     /* PROBLEM  */
@@ -1064,10 +1030,6 @@ so they don't overlap */
     /* INSIGHT  */
 
     /* CONCEPT  */
-    .details{
-      padding: 0 25px;
-    }
-
     .concept-image-container{
       width: 3250px;
       height: 350px;
