--- a/css/index.css
+++ b/css/index.css
@@ -136,7 +136,7 @@ figcaption{
     height: 100%;
     width: 0;
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 2; /* Sit on top */
     left: 0;
     top: 0;
     background-color: rgb(0,0,0); /* Black fallback color */
@@ -890,6 +890,7 @@ footer{
         display: block;
         position: fixed;
         top: 0;
+        z-index: 1;
         right: 0;
         color: #283891;
     }
