--- a/css/receipt.css
+++ b/css/receipt.css
@@ -196,7 +196,7 @@ html {
     height: 100%;
     width: 0;
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 2; /* Sit on top */
     left: 0;
     top: 0;
     background-color: rgb(0,0,0); /* Black fallback color */
@@ -300,7 +300,8 @@ iframe{
 
 .process p{
   font-size: 16px;
-  padding: 0 100px;
+  text-align: left;
+  padding: 0 150px;
 }
 
 .problem, .research, .insight, .concept, .iteration{
@@ -615,6 +616,9 @@ font-family: 'Poppins', sans-serif;
     }
 
     /* THE PROCESS  */
+    .process p{
+      padding: 0 25px;
+    }
 
     /* PROBLEM  */
 
@@ -850,6 +854,7 @@ font-family: 'Poppins', sans-serif;
         position: fixed;
         top: 0;
         right: 0;
+        z-index: 1;
         color: #283891;
     }
 
@@ -864,6 +869,9 @@ font-family: 'Poppins', sans-serif;
     }
 
     /* THE PROCESS  */
+    .process p{
+      padding: 0 50px;
+    }
 
     /* PROBLEM  */
 
@@ -1017,7 +1025,7 @@ font-family: 'Poppins', sans-serif;
 
     /* THE PROCESS  */
     .process p{
-      padding: 0 15px;
+      padding: 0 25px;
       text-align: left;
     }
 
