--- a/css/hammer.css
+++ b/css/hammer.css
@@ -243,7 +243,6 @@ html {
 }
 
 .description p{
-  
   text-align: left;
 }
 
@@ -617,7 +616,7 @@ font-family: 'Poppins', sans-serif;
       flex-flow: column wrap;
     }
 
-    .description h2, .description p{
+    .description h2{
       text-align: center;
     }
 
@@ -762,7 +761,6 @@ font-family: 'Poppins', sans-serif;
     /* PROJECT DESCRIPTION  */
     .description p, .process p{
       padding: 0;
-      text-align: left;
     }
 
     /* THE PROCESS  */
@@ -1023,6 +1021,10 @@ so they don't overlap */
     /* THE PROCESS  */
     .process p, .description p{
       font-size: 10px;
+    }
+
+    .process p{
+      padding: 0;
     }
 
     /* PROBLEM  */
