--- a/css/hammer.css
+++ b/css/hammer.css
@@ -1014,6 +1014,10 @@ so they don't overlap */
       font-size: 24px;
     }
 
+    #header h1{
+      padding: 0 5px;
+    }
+
     .process h2, .description h2{
       font-size: 20px;
     }
