--- a/css/receipt.css
+++ b/css/receipt.css
@@ -117,6 +117,14 @@ font-family: 'Poppins', sans-serif;
   margin: 2.0em auto 0 auto;
 }
 
+/* BANNER IMG  */
+#banner-img{
+  display: block;
+  width: 700px;
+  margin: 0 auto;
+}
+
+/* MORE PROJECTS  */
 #hammer{
   width: 250px;
   border-radius: 10px;
@@ -140,81 +148,6 @@ font-family: 'Poppins', sans-serif;
   display: flex;
   flex-flow: row nowrap;
   margin: 0 auto 2.0em;
-}
-
-/* MODAL IMAGE */
-/* Style the Image Used to Trigger the Modal */
-#myImg {
-  border-radius: 10px;
-  cursor: pointer;
-  transition: 0.3s;
-  width: 500px;
-}
-
-#myImg:hover {opacity: 0.7;}
-
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  /* background-color: rgba(0,0,0,0.9); Black w/ opacity */
-}
-
-/* Modal Content (Image) */
-.modal-content {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-}
-
-/* Caption of Modal Image (Image Text) - Same Width as the Image */
-#caption {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-  text-align: center;
-  color: #ccc;
-  padding: 10px 0;
-  height: 150px;
-}
-
-/* Add Animation - Zoom in the Modal */
-.modal-content, #caption {
-  animation-name: zoom;
-  animation-duration: 0.6s;
-}
-
-@keyframes zoom {
-  from {transform:scale(0)}
-  to {transform:scale(1)}
-}
-
-/* The Close Button */
-.close {
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
-  font-size: 40px;
-  font-weight: bold;
-  transition: 0.3s;
-}
-
-.close:hover,
-.close:focus {
-  color: #bbb;
-  text-decoration: none;
-  cursor: pointer;
 }
 
 /* NAVIGATION  */
@@ -308,6 +241,13 @@ font-family: 'Poppins', sans-serif;
   flex-flow: column nowrap;
   text-align: center;
   /* margin-bottom: 2.0em; */
+}
+
+/* banner  */
+.banner{
+  width: 100%;
+  background-color: #877EFC;
+  margin: 1.0em 0 4.0em;
 }
 
 /* OVERVIEW  */
