--- a/css/receipt.css
+++ b/css/receipt.css
@@ -143,7 +143,7 @@ font-family: 'Poppins', sans-serif;
   width: 1000px;
   /* background-color: #f2f4ff; */
   margin: 0 auto 2.0em;
-  border: solid;
+  /* border: solid; */
 }
 
 /* PROTOTYPE FIGURE  */
@@ -245,7 +245,6 @@ font-family: 'Poppins', sans-serif;
   justify-content: center;
   flex-flow: column nowrap;
   text-align: center;
-  /* margin-bottom: 2.0em; */
 }
 
 /* banner  */
