--- a/css/receipt.css
+++ b/css/receipt.css
@@ -38,22 +38,22 @@ html {
 
 /* CONTAINER  */
 .container {
-  max-width: 80vw;
+  max-width: 100%;
   display: block;
-  margin: 1.0em auto 4.0em;
+  margin: 0 auto;
   text-align: center;
-  padding: 2.0em 5.0em;
-  /* background-color: whitesmoke; */
-  /* background-color: #f2f4ff; */
+  padding: 2.0em 20.0em;
 }
 
 .container-color{
   background-color: #f2f4ff;
 }
+
 /* THE WHOLE  */
 body{
   margin: 0;
   padding: 0;
+  background-color: white
 }
 
 /* FONT  */
@@ -141,9 +141,7 @@ font-family: 'Poppins', sans-serif;
 /* FIG IMGS  */
 #mvp-fig, #imp-fig, #research-fig, #persona-fig{
   width: 1000px;
-  /* background-color: #f2f4ff; */
-  margin: 0 auto 2.0em;
-  /* border: solid; */
+  margin: 4.0em auto 0;
 }
 
 /* PROTOTYPE FIGURE  */
@@ -152,7 +150,7 @@ font-family: 'Poppins', sans-serif;
   background-color: #f2f4ff;
   display: flex;
   flex-flow: row nowrap;
-  margin: 0 auto 2.0em;
+  margin: 4.0em auto 0;
 }
 
 /* NAVIGATION  */
@@ -251,14 +249,15 @@ font-family: 'Poppins', sans-serif;
 .banner{
   width: 100%;
   background-color: #283891;
-  margin: 1.0em 0 4.0em;
+  margin: 1.0em 0 0;
+  /* margin: 0 auto; */
 }
 
 /* OVERVIEW  */
 .overview{
   text-align: left;
   line-height: 1.5em;
-  padding: 4.0em 0;
+  padding: 8.0em 0;
 }
 
 .overview-row{
@@ -268,11 +267,11 @@ font-family: 'Poppins', sans-serif;
 }
 
 .summary{
-  margin-right: 2.0em;
+  margin-right: 6.0em;
 }
 
 .role{
-  margin-left: 2.0em;
+  margin-left: 6.0em;
 }
 
 .position{
@@ -283,7 +282,7 @@ font-family: 'Poppins', sans-serif;
 .background{
   text-align: left;
   line-height: 1.5em;
-  padding: 4.0em 0;
+  padding: 8.0em 0;
 }
 
 .background-info{
@@ -294,7 +293,7 @@ font-family: 'Poppins', sans-serif;
 .achievements{
   text-align: left;
   line-height: 1.5em;
-  padding: 4.0em 0;
+  padding: 4.0em 0 0;
 }
 
 .achievements ul{
@@ -311,54 +310,54 @@ font-family: 'Poppins', sans-serif;
 .research{
   text-align: left;
   line-height: 1.5em;
-  padding: 4.0em 0;
+  padding: 8.0em 0;
 }
 
 /* PERSONA */
 .persona{
   text-align: left;
   line-height: 1.5em;
-  padding: 4.0em 0;
+  padding: 8.0em 0;
 }
 
 /* STATEMENT */
 .statement{
   text-align: left;
   line-height: 1.5em;
-  padding: 4.0em 0;
+  padding: 8.0em 0;
 }
 
 /* VISION */
 .vision{
   text-align: left;
   line-height: 1.5em;
-  padding-top: 4.0em;
+  padding: 8.0em 0;
 }
 
 iframe{
+  display: block;
   width: 1000px;
   height: 600px;
-  margin: 4.0em 0;
-  padding-bottom: 4.0em;
+  margin: 2.0em auto 0;
 }
 
 /* MARKET  */
 .market{
   text-align: left;
   line-height: 1.5em;
-  padding: 4.0em 0;
+  padding: 8.0em 0;
 }
 
 /* MVP */
 .mvp{
   text-align: left;
   line-height: 1.5em;
-  padding: 4.0em 0;
+  padding: 8.0em 0;
 }
 
 /* COMPETITION  */
 .competitor{
-  margin: 2.0em 0;
+  margin-top: 2.0em;
 }
 
 .competitor h2{
@@ -383,7 +382,7 @@ iframe{
 .design{
   text-align: left;
   line-height: 1.5em;
-  padding: 4.0em 0;
+  padding: 8.0em 0;
 }
 
 .proto-para{
@@ -399,14 +398,14 @@ iframe{
 .implementation{
   text-align: left;
   line-height: 1.5em;
-  padding: 4.0em 0;
+  padding: 8.0em 0;
 }
 
 /* TAKEAWAY */
 .takeaway{
   text-align: left;
   line-height: 1.5em;
-  padding: 4.0em 0 0;
+  padding: 8.0em 0;
 }
 
 /* MORE PROJECTS  */
@@ -418,10 +417,6 @@ iframe{
 /* ETC  */
 figcaption{
   text-align: left;
-}
-
-.topic-imgs, .proto-imgs{
-  margin-top: 1.0em;
 }
 
 #light-head{
@@ -436,8 +431,21 @@ figcaption{
 /* THE NORMAL  */
 @media  screen and (max-width: 1000px){
   /* DEFAULT STUFF  */
+  .container{
+    padding: 2.0em 4.0em;
+  }
 
   /* IMAGES */
+
+  /* banner */
+  #banner-img{
+    width: 500px;
+  }
+
+  /* figures  */
+  #mvp-fig, #imp-fig, #research-fig, #persona-fig{
+    width: 800px;
+  }
 
   /* NAVIGATION  */
 
@@ -470,6 +478,11 @@ figcaption{
   /* TAKEAWAY */
 
   /* ETC  */
+  iframe{
+    width: 800px;
+    height: 500px;
+  }
+  
 }
 
 /* ADJUSTED SCREEN - MEDIUM*/
