--- a/css/receipt.css
+++ b/css/receipt.css
@@ -109,6 +109,16 @@ font-family: 'Poppins', sans-serif;
   text-align: center;
   padding: 2.0em 5.0em;
   background-color: white;
+  font-size: 18px;
+}
+
+#footer-icon{
+  color: black;
+  margin: 0 10px;
+}
+
+section{
+  line-height: 2.0em;
 }
 
 /* IMAGES  */
@@ -411,7 +421,7 @@ iframe{
 /* MORE PROJECTS  */
 .proj{
   border-top: solid;
-  padding-top: 2.0em;
+  padding: 2.0em 0 4.0em;
 }
 
 /* ETC  */
@@ -452,6 +462,13 @@ figcaption{
   /* HEADER  */
 
   /* OVERVIEW  */
+  .summary{
+    margin-right: 2.5em;
+  }
+  
+  .role{
+    margin-left: 2.5em;
+  }
 
   /* ROLE  */
 
@@ -482,7 +499,6 @@ figcaption{
     width: 800px;
     height: 500px;
   }
-  
 }
 
 /* ADJUSTED SCREEN - MEDIUM*/
@@ -490,6 +506,10 @@ figcaption{
   /* DEFAULT STUFF  */
 
   /* IMAGES */
+  /* figures  */
+  #mvp-fig, #imp-fig, #research-fig, #persona-fig{
+    width: 650px;
+  }
 
   /* NAVIGATION  */
 
@@ -499,7 +519,23 @@ figcaption{
     width: 100px;
   }
   /* OVERVIEW  */
+  .overview-row{
+    display: block;
+  }
 
+  .summary{
+    margin-right: 0;
+  }
+  
+  .role{
+    margin: 2.0em 0 0;
+  }
+  
+  .position{
+    margin: 0 0 2.0em;
+  }
+
+  
   /* ROLE  */
 
   /* BACKGROUND */
@@ -515,16 +551,36 @@ figcaption{
   /* VISION */
 
   /* MARKET  */
+  .competitor{
+    margin: 2.0em auto 0;
+    padding: 2.0em 2.0em 0;
+  }
 
   /* MVP */
 
   /* DESIGN */
+  .proto-desc{
+    width: 650px;
+  }
 
   /* IMPLEMENTATION */
 
   /* TAKEAWAY */
 
+  /* FOOTER  */
+  .footer-container{
+    font-size: 14px;
+  }
+  
   /* ETC  */
+  iframe{
+    width: 650px;
+    height: 400px;
+  }
+
+  #hammer{
+    width: 200px;
+  }
 }
 
 /* 100% Image Width on Smaller Screens */
