--- a/css/receipt.css
+++ b/css/receipt.css
@@ -674,17 +674,20 @@ figcaption{
 /* WIDTH SIZE SMALLEST  */
 @media screen and (max-width: 500px){
   /* DEFAULT STUFF  */
-  .container{
-    padding: 2.0em 0;
-  }
+  
   /* IMAGES */
+  #mvp-fig, #imp-fig, #research-fig, #persona-fig{
+    width: 450px;
+  }
 
   /* NAVIGATION  */
 
   /* HEADER  */
 
   /* OVERVIEW  */
-
+  .overview, .background, .research, .persona, .statement, .vision, .market, .mvp, .design, .implementation, .takeaway{
+    padding: 4.0em 0;
+  }
   /* ROLE  */
 
   /* BACKGROUND */
@@ -704,12 +707,19 @@ figcaption{
   /* MVP */
 
   /* DESIGN */
+  .proto-desc{
+    width: 450px;
+  }
 
   /* IMPLEMENTATION */
 
   /* TAKEAWAY */
 
   /* ETC  */
+  iframe{
+    width: 450px;
+    height: 300px;
+  }
 }
 
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, 
@@ -725,12 +735,22 @@ so they don't overlap */
 }
 
 /* MOBILE IPHONE 6/7/8  */
-@media  screen and (max-width: 375px){
+@media screen and (max-width: 375px){
   /* DEFAULT STUFF  */
   .container{
     max-width: 375px;
+    padding: 0;
   }
+
   /* IMAGES */
+  #banner-img{
+    width: 350px;
+  }
+
+  #mvp-fig, #imp-fig, #research-fig, #persona-fig{
+    width: 350px;
+    background-color: yellow;
+  }
 
   /* NAVIGATION  */
 
@@ -741,6 +761,9 @@ so they don't overlap */
   }
 
   /* OVERVIEW  */
+  .overview, .background, .research, .persona, .statement, .vision, .market, .mvp, .design, .implementation, .takeaway{
+    padding: 2.0em 0;
+  }
 
   /* ROLE  */
 
@@ -761,10 +784,17 @@ so they don't overlap */
   /* MVP */
 
   /* DESIGN */
+  .proto-desc{
+    width: 350px;
+  }
 
   /* IMPLEMENTATION */
 
   /* TAKEAWAY */
 
   /* ETC  */
+  iframe{
+    width: 350px;
+    height: 300px;
+  }
 }
